--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -64,6 +64,9 @@ ul{
 li{
   margin-top: 1rem;
 }
+input,
+select,
+textarea,
 button{
   padding: 1rem;
   border-radius: 0.5rem;
@@ -73,6 +76,13 @@ button{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+button{
+  background-color: #f8f8f8;
+  cursor: pointer;
+}
+input:hover,
+select:hover,
+textarea:hover,
 button:hover{
   border: 0.1rem #404040 solid;
 }
@@ -91,11 +101,19 @@ a.brand{
   font-size: 3rem;
   font-weight: bold;
 }
+.badge{
+  background-color: #f02020;
+  color: #ffffff;
+  border-radius: 50%;
+  padding: 0.2rem 0.7rem;
+  font-size: 1.4rem;
+}
 .row{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  margin-left: 0.2rem;
 }
 .row.center {
   justify-content: center;
