--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -185,3 +185,16 @@ img.large{
   color: #a02020;
   background-color: #e0e0ff;
 }
+.form{
+  max-width: 60rem;
+  margin: 0 auto;
+}
+.form > div{
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+}
+.form label{
+  margin: 1rem 0;
+  display: block;
+}
