--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,25 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-}
-#root{
-  height: 100%;
-}
-html{
-  font-size: 62.5%;/* 16px * 62.5 = 10px = 1rem */
+html {
+  font-size: 62.5%; /* 16px x 62.5 = 10px = 1rem */
   box-sizing: border-box;
 }
-body{
-  margin:0;
+body {
+  margin: 0;
   height: 100vh;
   font-size: 1.6rem;
-  font-family: Helvetica, Arial,sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.grid-container{
+#root {
+  height: 100%;
+}
+
+/* Layout */
+.grid-container {
   display: grid;
   grid-template-areas:
     'header'
@@ -29,91 +25,94 @@ body{
   grid-template-rows: 5rem 1fr 5rem;
   height: 100%;
 }
-header{
+header {
   grid-area: header;
   background-color: #203040;
 }
-main{
+main {
   grid-area: main;
   padding: 1rem;
 }
-footer{
+footer {
   grid-area: footer;
   background-color: #203040;
   color: #ffffff;
 }
-a{
+/* Common */
+h1 {
+  font-size: 1.8rem;
+  padding: 1rem 0;
+}
+h2 {
+  font-size: 1.6rem;
+  padding: 1rem 0;
+}
+
+a {
   text-decoration: none;
 }
-h1{
-  font-size: 1.8rem;
-  padding: 1rem 0;  
-}
-h2{
-  font-size: 1.6rem;
-  padding: 1rem 0; 
-}
-a:hover{
+a:hover {
   color: #ff8000;
 }
-ul{
+ul {
   padding: 0;
   margin: 0;
   list-style-type: none;
 }
-li{
+li {
   margin-top: 1rem;
 }
 input,
 select,
 textarea,
-button{
+button {
   padding: 1rem;
   border-radius: 0.5rem;
   border: 0.1rem #a4a4a4 solid;
   font-size: 1.6rem;
-  font-family: Helvetica, Arial,sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-button{
+button {
   background-color: #f8f8f8;
   cursor: pointer;
 }
 input:hover,
 select:hover,
 textarea:hover,
-button:hover{
+button:hover {
   border: 0.1rem #404040 solid;
 }
-button.primary{
+button.primary {
   background-color: #f0c040;
 }
-button.block{
+button.block {
   width: 100%;
 }
-header a{
+/* Header */
+header a {
   color: #ffffff;
   padding: 1rem;
 }
-a.brand{
+a.brand {
   color: #ffffff;
   font-size: 3rem;
   font-weight: bold;
 }
-.badge{
+.badge {
   background-color: #f02020;
   color: #ffffff;
   border-radius: 50%;
   padding: 0.2rem 0.7rem;
   font-size: 1.4rem;
+  margin-left: 0.2rem;
 }
-.row{
+.row {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  margin-left: 0.2rem;
 }
 .row.center {
   justify-content: center;
@@ -121,88 +120,99 @@ a.brand{
 .row.top {
   align-items: flex-start;
 }
-.col-1{
+.col-1 {
   flex: 1 1 25rem;
 }
-.col-2{
+.col-2 {
   flex: 2 1 50rem;
 }
-.min-30{
+.min-30 {
   min-width: 30rem;
 }
-img{
+
+/* Image */
+img {
   border-radius: 0.5rem;
 }
-img.small{
+img.small {
   max-width: 5rem;
   width: 100%;
 }
-img.medium{
+img.medium {
   max-width: 29rem;
   width: 100%;
 }
-img.large{
+img.large {
   width: 100%;
 }
-.card{
+
+/* Card */
+.card {
   border: 0.1rem #c0c0c0 solid;
   background-color: #f8f8f8;
   border-radius: 0.5rem;
   margin: 1rem;
 }
-.card-body{
+.card-body {
   padding: 1rem;
 }
-.card-body > *{
+.card-body > * {
   margin-bottom: 0.5rem;
 }
-.price{
-  font-size: 2rem; 
+.price {
+  font-size: 2rem;
 }
-.rating span{
+/* Rating */
+.rating span {
   color: #f0c040;
   margin: 0.1rem;
 }
-.rating span:last-child{
-  color:#404040;
+.rating span:last-child {
+  color: #404040;
 }
-.success{
+/* Alert */
+.loading {
+  display: block !important;
+}
+.success {
   color: #20a020;
 }
-.danger{
+.danger {
   color: #a02020;
 }
-.alert{
+.alert {
   padding: 1rem;
   border: 0.1rem solid transparent;
   border-radius: 0.5rem;
 }
-.alert-info{
+.alert-info {
   color: #2020a0;
   background-color: #e0e0ff;
 }
-.alert-danger{
+.alert-danger {
   color: #a02020;
-  background-color: #e0e0ff;
+  background-color: #ffe0e0;
 }
-.form{
+/* Form */
+.form {
   max-width: 60rem;
   margin: 0 auto;
 }
-.form > div{
+.form > div {
   display: flex;
   flex-direction: column;
   margin: 1rem;
 }
-.form label{
+.form label {
   margin: 1rem 0;
   display: block;
 }
-.dropdown{
+/* Dropdown */
+.dropdown {
   display: inline-block;
   position: relative;
 }
-.dropdown-content{
+.dropdown-content {
   position: absolute;
   display: none;
   right: 0;
@@ -214,6 +224,6 @@ img.large{
   margin-top: 0.4rem;
   border-radius: 0.5rem;
 }
-.dropdown:hover .dropdown-content{
+.dropdown:hover .dropdown-content {
   display: block;
 }
